--- a/src/app/home-main-top/home-main-top.component.css
+++ b/src/app/home-main-top/home-main-top.component.css
@@ -1,1 +1,87 @@
-@import '~materialize-css/dist/css/materialize.min.css'
+@import '~materialize-css/dist/css/materialize.min.css';
+@import "~font-awesome/css/font-awesome.min.css";
+
+.focus {
+    padding: 30px;
+  }
+
+  .jeev-font {
+    font-family: 'Oswald', sans-serif;
+  }
+
+  .jeeve-color-blue {
+    background-color: royalblue;
+  }
+
+  .jeeve-font-white {
+    color: white;
+  }
+
+  .jeeve-font-blue {
+    color: royalblue;
+  }
+  .outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+}
+
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.inner {
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+div .section-divider-top-white{
+    min-height: 50px;
+     width: 50px; 
+     border-radius:50%; 
+     position: relative; 
+     top: -25px; 
+     display: inline-flex;
+     background-color: white; 
+     margin: 0px; 
+     padding: 0px;
+}
+
+div .section-divider-top-rblue{
+    min-height: 50px;
+     width: 50px; 
+     border-radius:50%; 
+     position: relative; 
+     top: -25px; 
+     display: inline-flex;
+     background-color: royalblue; 
+     margin: 0px; 
+     padding: 0px;
+}
+
+div .section-divider-bottom-white{
+    min-height: 50px;
+     width: 50px; 
+     border-radius:50%; 
+     position: relative; 
+     top: 25px; 
+     display: inline-flex;
+     background-color: white; 
+     margin: 0px; 
+     padding: 0px;
+}
+
+div .section-divider-bottom-rblue{
+    min-height: 50px;
+     width: 50px; 
+     border-radius:50%; 
+     position: relative; 
+     top: 25px; 
+     display: inline-flex;
+     background-color: royalblue; 
+     margin: 0px; 
+     padding: 0px;
+}
