--- a/src/app/home-main-top/home-main-top.component.html
+++ b/src/app/home-main-top/home-main-top.component.html
@@ -1,3 +1,89 @@
-<p>
-  home-main-top works!
-</p>
+<!-- Idea? -->
+<div style="background-color: royalblue">
+  <div class="container">
+    <div class="row">
+      <div class="col m6">
+        <div class="focus jeev-font" style="text-align: right">
+          <h1 class="jeeve-font-white">
+            Psssst! Have an idea?</h1>
+          <h5>
+            Jeeveh helps you to make it real.
+          </h5>
+          <div>
+            <button class="btn jeev-font">How?</button>
+          </div>
+        </div>
+      </div>
+      <div class="col m6">
+          <div class="focus">
+              <div style=" border: 2px; border-style: dashed; height: 400px">
+                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="responsive-img"> <!-- notice the "circle" class -->
+              </div>
+            </div>
+      </div>
+    </div>
+  </div>
+  <!--<div class="section-divider-rblue">
+  </div><div class="section-divider-bottom-white">
+  </div><div class="section-divider-bottom-rblue">
+  </div><div class="section-divider-bottom-white">
+  </div><div class="section-divider-bottom-rblue">
+  </div><div class="section-divider-bottom-white">
+  </div>-->
+</div>
+
+<!-- Technology -->
+<div style="background-color: white">
+  
+  <div class="container">
+    <div class="row">
+      <div class="col m6">
+        <div class="focus">
+          <div style=" border: 2px; border-style: dashed; height: 400px">
+
+          </div>
+        </div>
+      </div>
+      <div class="col m6">
+        <div class="focus jeev-font">
+          <h1 class="jeeve-font-blue">
+            Tailored Solution for your Business</h1>
+          <h5>
+            Providing the best solution Using the latest technologies designed and customized for your business or your idea.
+          </h5>
+          <div>
+            <button class="btn jeev-font">Learn more!</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Quality -->
+<div style="background-color: royalblue">
+  <div class="container">
+    <div class="row">
+      <div class="col m6">
+        <div class="focus jeev-font" style="text-align: right">
+          <h1 class="jeeve-font-white">
+            Quality and efficiency is our culture</h1>
+          <h5>
+            Jeeveh helps you to make it real.
+          </h5>
+          <div>
+            <button class="btn jeev-font">Learn More!</button>
+          </div>
+        </div>
+      </div>
+      <div class="col m6">
+        <div class="focus">
+          <div style=" border: 2px; border-style: dashed; height: 400px">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
