--- a/src/app/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/top-nav-bar/top-nav-bar.component.html
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Pricing <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="#">Contact Us <span class="sr-only">(current)</span></a></li>
         <li><a href="#">About US</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
