--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,31 @@
-<p>
-  footer works!
-</p>
+<div style="background-color: white; margin-top: 0px;padding: 40px;">
+  <div class="container">
+    <div class="row jeev-font jeev-font-blue" style="text-align: center">
+      <div class="col col-md-4">
+        <p>
+          <a href="/contact_us">About Us</a>
+        </p>
+        <p>
+          <a href="/contact_us">Contact Us</a>
+        </p>
+        <p>
+          <a href="/contact_us">Jobs</a>
+        </p>
+      </div>
+      <div class="col col-md-4">
+        <p>
+          <a href="/contact_us">About Us</a>
+        </p>
+      </div>
+      <div class="col col-md-4">
+        <p>
+          <a href="/contact_us">About Us</a>
+        </p>
+      </div>
+    </div>
+    <hr style="border-color: orangered; border-width: 4px">
+    <div style="text-align: center">
+      <p class="jeev-font jeev-font-blue">Jeeveh | 2017</p>
+    </div>
+  </div>
+</div>
