--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,29 +3,29 @@
     <div class="row jeev-font jeev-font-blue" style="text-align: center">
       <div class="col col-md-4">
         <p>
-          <a href="/contact_us">About Us</a>
+          <a href="/about_us">About Us</a>
         </p>
         <p>
           <a href="/contact_us">Contact Us</a>
         </p>
         <p>
-          <a href="/contact_us">Jobs</a>
+          <a href="/jobs">Jobs</a>
         </p>
       </div>
       <div class="col col-md-4">
         <p>
-          <a href="/contact_us">About Us</a>
+          <a href="/about_us">About Us</a>
         </p>
       </div>
       <div class="col col-md-4">
         <p>
-          <a href="/contact_us">About Us</a>
+          <a href="/about_us">About Us</a>
         </p>
       </div>
     </div>
     <hr style="border-color: orangered; border-width: 4px">
     <div style="text-align: center">
-      <p class="jeev-font jeev-font-blue">Jeeveh | 2017</p>
+      <p class="jeev-font jeev-font-blue">Jeeveh | 2017 | NYC</p>
     </div>
   </div>
 </div>
