--- a/src/app/home-main-top/home-main-top.component.html
+++ b/src/app/home-main-top/home-main-top.component.html
@@ -16,8 +16,8 @@
       </div>
       <div class="col m6">
           <div class="focus">
-              <div style=" border: 2px; border-style: dashed; height: 400px">
-                  <img src="http://materializecss.com/images/yuna.jpg" alt="" class="responsive-img"> <!-- notice the "circle" class -->
+              <div>
+                  <img src="/assets/images/idea.jpeg" alt="" class="responsive-img"> <!-- notice the "circle" class -->
               </div>
             </div>
       </div>
@@ -39,8 +39,8 @@
     <div class="row">
       <div class="col m6">
         <div class="focus">
-          <div style=" border: 2px; border-style: dashed; height: 400px">
-
+          <div>
+              <img src="/assets/images/business.jpeg" alt="" class="responsive-img"> <!-- notice the "circle" class -->
           </div>
         </div>
       </div>
@@ -79,8 +79,8 @@
       </div>
       <div class="col m6">
         <div class="focus">
-          <div style=" border: 2px; border-style: dashed; height: 400px">
-
+          <div>
+              <img src="/assets/images/quality.jpeg" alt="" class="responsive-img"> <!-- notice the "circle" class -->
           </div>
         </div>
       </div>
