--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,13 +13,16 @@
         </p>
       </div>
       <div class="col col-md-4">
+          <p>
+              <a href="/culture">Our Culture</a>
+            </p>
         <p>
-          <a href="/about_us">About Us</a>
+          <a href="/price">Price</a>
         </p>
       </div>
       <div class="col col-md-4">
         <p>
-          <a href="/about_us">About Us</a>
+          <a href="/about_us">Locations</a>
         </p>
       </div>
     </div>
